@@ -3,8 +3,11 @@ package edu.colorado.phet.sugarandsaltsolutions.micro.model.sodiumnitrate;
 
 import edu.colorado.phet.common.phetcommon.math.ImmutableVector2D;
 import edu.colorado.phet.common.phetcommon.model.property.ObservableProperty;
+import edu.colorado.phet.common.phetcommon.util.function.Function0;
+import edu.colorado.phet.common.phetcommon.util.function.Function1;
 import edu.colorado.phet.sugarandsaltsolutions.common.model.Beaker;
 import edu.colorado.phet.sugarandsaltsolutions.common.model.DispenserType;
+import edu.colorado.phet.sugarandsaltsolutions.micro.model.Component.SodiumIon;
 import edu.colorado.phet.sugarandsaltsolutions.micro.model.MicroModel;
 import edu.colorado.phet.sugarandsaltsolutions.micro.model.MicroShaker;
 
@@ -19,6 +22,20 @@ public class SodiumNitrateShaker extends MicroShaker {
     }
 
     @Override protected void addCrystal( MicroModel model, ImmutableVector2D outputPoint, double volumePerSolidMole, ImmutableVector2D crystalVelocity ) {
-        model.addSodiumNitrateCrystal( new SodiumNitrateCrystal( outputPoint, (SodiumNitrateLattice) new SodiumNitrateLattice().grow( 20 ) ) );
+
+
+        model.addSodiumNitrateCrystal( new SodiumNitrateCrystal( outputPoint,
+                                                                 generateRandomLattice( new Function0<SodiumNitrateLattice>() {
+                                                                                            public SodiumNitrateLattice apply() {
+
+                                                                                                //TODO: can we get rid of this cast?
+                                                                                                return (SodiumNitrateLattice) new SodiumNitrateLattice().grow( 19 );
+                                                                                            }
+                                                                                        }, new Function1<SodiumNitrateLattice, Boolean>() {
+                                                                     public Boolean apply( SodiumNitrateLattice lattice ) {
+                                                                         return lattice.count( SodiumIon.class ) == lattice.count( edu.colorado.phet.sugarandsaltsolutions.micro.model.Component.Nitrate.class );
+                                                                     }
+                                                                 }
+                                                                 ) ) );
     }
 }
